# mm-agent-bridge

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agent/: HERMES_POLICIES.md
.github/workflows/: ci.yml
app/src/mm_agent_bridge/: config.py  db.py  main.py  models.py  schemas.py  security.py  worker.py
app/src/mm_agent_bridge/services/: agent_runtime.py  bridge_service.py  executor.py  mattermost_client.py  task_worker.py
app/tests/: test_agent_runtime.py  test_executor.py  test_webhook.py  test_worker.py
docs/: architecture.md
infra/: docker-compose.yml
sql/: 001_init.sql  002_add_response_url.sql
